[gd_scene load_steps=21 format=3 uid="uid://dsghqpodawu4k"]

[ext_resource type="Script" path="res://scenes/ship_designer/ship_designer_UI.gd" id="1_2lqi6"]
[ext_resource type="Script" path="res://scenes/ship_designer/ship_modules_tabs.gd" id="1_8pofq"]
[ext_resource type="Texture2D" uid="uid://dntuyagyuurn7" path="res://assets/my/icons/hulls_Mk1_icon.png" id="1_liwnt"]
[ext_resource type="Texture2D" uid="uid://b0nxk2a5ergrg" path="res://assets/my/icons/hull_icon.png" id="2_7dya4"]
[ext_resource type="Resource" uid="uid://bcipk3okfgvmw" path="res://scenes/ship_designer/blueprints/cocpits/mk_1.tres" id="2_30l74"]
[ext_resource type="Texture2D" uid="uid://be4ipqguxwvhw" path="res://assets/my/icons/hulls_Mk2_icon.png" id="2_840sw"]
[ext_resource type="Resource" uid="uid://cslaa4bl6s0qd" path="res://scenes/ship_designer/blueprints/cocpits/mk_2.tres" id="3_j6uy2"]
[ext_resource type="Texture2D" uid="uid://drcsjjfbjru4x" path="res://assets/my/icons/engine_icon.png" id="3_mws7v"]
[ext_resource type="Texture2D" uid="uid://7ma7i2kd3uhu" path="res://assets/my/icons/cocpit_icon.png" id="4_e7sch"]
[ext_resource type="Resource" uid="uid://2lrej826csft" path="res://scenes/ship_designer/blueprints/engines/mk_1.tres" id="4_w46p3"]
[ext_resource type="Texture2D" uid="uid://ux36to6rkudt" path="res://assets/my/icons/style_icon.png" id="5_0hykj"]
[ext_resource type="Resource" uid="uid://dikohxjdquusk" path="res://scenes/ship_designer/blueprints/engines/mk_2.tres" id="5_rvfwp"]
[ext_resource type="Texture2D" uid="uid://b01ngftnrfm3q" path="res://assets/my/ship_o1/style_1.PNG" id="7_qo20g"]
[ext_resource type="Texture2D" uid="uid://cpb4bjm46s1nn" path="res://assets/my/ship_o1/style_2.png" id="8_14kfu"]
[ext_resource type="Texture2D" uid="uid://byxx4hkfvugmv" path="res://assets/my/ship_o1/style_8.PNG" id="9_ph1b7"]
[ext_resource type="Texture2D" uid="uid://bkk8s8jjfxrj3" path="res://assets/my/ship_o1/style_7.PNG" id="10_ox1lj"]
[ext_resource type="Texture2D" uid="uid://tsyi84v42gdk" path="res://assets/my/ship_o1/style_6.PNG" id="11_28dfj"]
[ext_resource type="Texture2D" uid="uid://bev5qi3asmhwq" path="res://assets/my/ship_o1/style_5.PNG" id="12_optiv"]
[ext_resource type="PackedScene" uid="uid://dli6leyaxng4g" path="res://scenes/ship_designer/blueprints/blueprint_base_baker.tscn" id="21_vw3sm"]

[sub_resource type="GDScript" id="GDScript_nihh4"]

[node name="ShipDesigner" type="CanvasLayer"]
script = ExtResource("1_2lqi6")
cocpits = Array[Resource("res://scenes/ship_designer/blueprints/cocpits/cocpit_blueprint_resource.gd")]([ExtResource("2_30l74"), ExtResource("3_j6uy2")])
engines = Array[Resource("res://scenes/ship_designer/blueprints/engines/engine_blueprint_resource.gd")]([ExtResource("4_w46p3"), ExtResource("5_rvfwp")])

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_8pofq")
hull_icon = ExtResource("2_7dya4")
cocpit_icon = ExtResource("4_e7sch")
engine_icon = ExtResource("3_mws7v")
style_icon = ExtResource("5_0hykj")

[node name="Hull" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_name = ""

[node name="HullsList" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Hull"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Hull/HullsList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Hull/HullsList/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Mk1" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Hull/HullsList/CenterContainer/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_liwnt")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Hull/HullsList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Hull/HullsList/CenterContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Mk2" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Hull/HullsList/CenterContainer2/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_840sw")
expand_mode = 5
stretch_mode = 4

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Hull/HullsList"]
layout_mode = 2
size_flags_vertical = 3

[node name="Cocpit" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = ""

[node name="CocpitsList" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Cocpit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Engine" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = ""

[node name="EnginesList" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Engine"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Style" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = ""

[node name="StylesList" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("7_qo20g")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer2/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("8_14kfu")
expand_mode = 5
stretch_mode = 4

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer3" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer3"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer3/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("9_ph1b7")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer4" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer4"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer4/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("10_ox1lj")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer5" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer5"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer5/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("11_28dfj")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer6" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer6"]
layout_mode = 2
theme_override_constants/margin_top = 32

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/TabContainer/Style/StylesList/CenterContainer6/MarginContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("12_optiv")
expand_mode = 5
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/MarginContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(256, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
stretch = true
stretch_shrink = 8

[node name="ShipBaseBaker" type="SubViewport" parent="PanelContainer/MarginContainer/HBoxContainer/CenterContainer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(32, 64)
render_target_update_mode = 4
script = SubResource("GDScript_nihh4")

[node name="CanvasLayer" type="CanvasLayer" parent="PanelContainer/MarginContainer/HBoxContainer/CenterContainer/SubViewportContainer/ShipBaseBaker"]

[node name="Node2D" type="Node2D" parent="PanelContainer/MarginContainer/HBoxContainer/CenterContainer/SubViewportContainer/ShipBaseBaker/CanvasLayer"]
position = Vector2(16, 32)

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/MarginContainer/HBoxContainer/CenterContainer/SubViewportContainer/ShipBaseBaker/CanvasLayer/Node2D"]
texture = ExtResource("1_liwnt")

[node name="BlueprintModuleBaker" parent="." instance=ExtResource("21_vw3sm")]
unique_name_in_owner = true
